--- a/css/style.css
+++ b/css/style.css
@@ -8,19 +8,27 @@ Dark green: #28b485
 */
 
 /* Universal Selector to reset*/
-* {
+*,
+*::after,
+*::before {
     margin: 0;
     padding: 0;
-    box-sizing: border-box; 
+    box-sizing: inherit;
+}
+
+/* 1 rem is === to 10px */
+html {
+    font-size: 62.5%;
 }
 
 body {
     font-family: "Laton", sans-serif;
     font-weight: 400;
-    font-size: 16px;
+    /* font-size: 16px; */
     line-height: 1.7;
     color: #777;
-    padding: 30px;
+    padding: 3rem;
+    box-sizing: border-box;
 }
 
 .header{
@@ -45,11 +53,11 @@ body {
 
 .logo-box{
     position: absolute;
-    top: 40px;
-    left: 40px;
+    top: 4rem;
+    left: 4rem;
 }
 .logo{
-    height: 35px;
+    height: 3.5rem;
 }
 
 
@@ -57,14 +65,14 @@ body {
     color: #ffffff;
     text-transform: uppercase;
     backface-visibility: hidden;
-    margin-bottom:60px; 
+    margin-bottom: 6rem; 
 }
 
 .heading-primary-main{
     display: block;
-    font-size: 60px;
+    font-size: 6rem;
     font-weight: 400;
-    letter-spacing: 35px;
+    letter-spacing: 3.5rem;
 
     /* most essentail animation */
     animation-name: moveInLeft;
@@ -76,9 +84,9 @@ body {
 
 .heading-primary-sub{
     display: block;
-    font-size: 20px;
+    font-size: 2rem;
     font-weight: 700;
-    letter-spacing: 17px;
+    letter-spacing: 1.7rem;
 
     animation: moveInRight 1s ease-out;
     /* animation-name: moveInRight;
@@ -89,11 +97,11 @@ body {
 @keyframes moveInLeft {
     0%{
         opacity: 0;
-        transform: translateX(-100%);
+        transform: translateX(-10rem);
     }
 
     80%{
-        transform: translateX(10px);
+        transform: translateX(1rem);
     }
 
     100%{
@@ -106,11 +114,11 @@ body {
 @keyframes moveInRight {
     0%{
         opacity: 0;
-        transform: translateX(100%);
+        transform: translateX(10rem);
     }
 
     80%{
-        transform: translateX(-10px);
+        transform: translateX(-1rem);
     }
 
     100%{
@@ -122,7 +130,7 @@ body {
 @keyframes moveInButton{
     0%{
         opacity: 0;
-        transform: translateY(30px);
+        transform: translateY(3rem);
     }
 
 
@@ -137,20 +145,21 @@ body {
 .btn:visited {
     text-transform: uppercase;
     text-decoration: none;
-    padding: 15px 40px;
+    padding: 1.5rem 4rem;
     display: inline-block;
-    border-radius: 100px;
+    border-radius: 10rem;
     transition: all .2s;
     position: relative;
+    font-size: 1.6rem;
 }
 
 .btn:hover{
-    transform: translateY(-3px);
-    box-shadow: 0 10px 20px rgba(0,0,0,.3);
+    transform: translateY(-.3rem);
+    box-shadow: 0 1rem 2rem rgba(0,0,0,.3);
 }
 .btn:active {
-    transform: translateY(-1px);
-    box-shadow: 0 5px 10px rgba(0,0,0,.1);
+    transform: translateY(-.1rem);
+    box-shadow: 0 .5rem 1rem rgba(0,0,0,.1);
 
 }
 
@@ -166,7 +175,7 @@ body {
     display: inline-block;
     height: 100%;
     width: 100%;
-    border-radius: 100px;
+    border-radius: 10rem;
     position: absolute;
     top: 0;
     left: 0;
