--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,7 @@ body {
     position: relative;
     clip-path: polygon(0 0, 100% 0 ,100% 70%, 0 100%  );
 }
-.text-box{
+.header__text-box{
     position: absolute;
     top:40%;
     left: 50%;
@@ -51,12 +51,12 @@ body {
     text-align: center;
 }
 
-.logo-box{
+.header__logo-box{
     position: absolute;
     top: 4rem;
     left: 4rem;
 }
-.logo{
+.header__logo{
     height: 3.5rem;
 }
 
@@ -68,7 +68,7 @@ body {
     margin-bottom: 6rem; 
 }
 
-.heading-primary-main{
+.heading-primary--main{
     display: block;
     font-size: 6rem;
     font-weight: 400;
@@ -82,7 +82,7 @@ body {
     /* animation-delay: 3s; */
 }
 
-.heading-primary-sub{
+.heading-primary--sub{
     display: block;
     font-size: 2rem;
     font-weight: 700;
@@ -163,7 +163,7 @@ body {
 
 }
 
-.btn-white{
+.btn--white{
     background-color: white;
     color: #777;
 }
@@ -192,7 +192,7 @@ body {
     opacity: 0;
 }
 
-.btn-animated {
+.btn--animated {
     animation: moveInButton 0.5s ease-out .75s;
     animation-fill-mode: backwards;
 }
