--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -11,9 +11,8 @@
     @include clearfix;
 
     [class^="col-"] {
-        background-color: orange;
         float: left;
-
+        background-color: $color-grey-light-1;
         &:not(:last-child){
             margin-right: $gutter-horizontal;
         }
