--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,5 +1,23 @@
 .section-about{
     background-color: $color-grey-light-1;
     padding: 25rem 0;
-    margin-top: -20vh
+    margin-top: -20vh;
+    margin-bottom: -10vh;
+}
+
+.section-features {
+    padding: 20rem 0;
+    background-image: linear-gradient(
+        to right bottom, 
+        rgba($color-primary-light, 0.85), 
+        rgba($color-primary-dark, 0.75) ),
+    url('../img/nat-4.jpg');
+    background-size: cover;
+    margin-top: -13rem;
+    transform: skewY(-6deg);
+
+    & > * {
+        transform: skewY(6deg);
+    }
+
 }
