--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -8,7 +8,7 @@
     padding: 1.5rem 4rem;
     display: inline-block;
     border-radius: 10rem;
-    transition: all .2s;
+    transition: all .5s;
     position: relative;
     font-size: $default-font-size;
     }
@@ -28,11 +28,20 @@
     }
     
     &--white{
-        background-color: white;
+        background-color: $color-white;
         color: $color-gray-dark;
 
         &::after{
-            background-color: white;
+            background-color: $color-white;
+        }
+
+    }
+    &--green{
+        background-color: $color-primary;
+        color: $color-white;
+
+        &::after{
+            background-color: $color-primary;
         }
 
     }
