--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -31,6 +31,14 @@
                 background-image: linear-gradient(to right bottom, $color-secondary-light, $color-secondary-dark);
             }
 
+            &-2 {
+                background-image: linear-gradient(to right bottom, $color-primary-light, $color-primary-dark);
+            }
+            
+            &-3 {
+                background-image: linear-gradient(to right bottom, $color-teriary-light, $color-teriary-dark);
+            }
+
         }
     }
 
@@ -52,6 +60,7 @@
         background-blend-mode: screen;
         -webkit-clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
         clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+        overflow: hidden;
 
 
         &--1 {
@@ -60,11 +69,13 @@
         }
 
         &--2 {
-            background-image: url('../img/nat-5.jpg')
+            background-image: linear-gradient(to right bottom, $color-primary-light, $color-primary-dark),
+            url('../img/nat-6.jpg')
         }
 
         &--3 {
-            background-image: url('../img/nat-5.jpg')
+            background-image: linear-gradient(to right bottom, $color-teriary-light, $color-teriary-dark),
+            url('../img/nat-7.jpg')
         }
     }
 
@@ -90,6 +101,18 @@
             rgba( $color-secondary-light, .85 ), 
             rgba( $color-secondary-dark, .85) );
         }
+
+        &--2{
+            background-image: linear-gradient(to right bottom, 
+            rgba( $color-primary-light, .85 ), 
+            rgba( $color-primary-dark, .85) );
+        }
+
+        &--3{
+            background-image: linear-gradient(to right bottom, 
+            rgba( $color-teriary-light, .85 ), 
+            rgba( $color-teriary-dark, .85) );
+        }
     }
 
     &__details {
@@ -109,6 +132,30 @@
                 }
             }
         }
+    }
+
+    //Back SIDE styling
+    &__cta {
+        position: absolute;
+        top:50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
+    &__price-box {
+        text-align: center;
+        color: $color-white;
+        margin-bottom: 8rem;
+    }
+
+    &__price-only {
+        font-size: 1.4rem;
+        text-transform: uppercase;
+    }
+
+    
+    &__price-value {
+        font-size: 6rem;
+        font-weight: 100;
     }
 
 }
