Finished booking and associated radio buttons

--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -1,6 +1,8 @@
 /* Psuedo class of the botton selector */
 .btn{
 
+    
+    &,
     &:link,
     &:visited {
     text-transform: uppercase;
@@ -11,6 +13,12 @@
     transition: all .5s;
     position: relative;
     font-size: $default-font-size;
+
+    
+    //Change for the <button> element
+    border: none;
+    cursor: pointer;
+
     }
 
     &:hover{
@@ -21,7 +29,9 @@
             opacity: 0;
         }
     }
-    &:active {
+    &:active,
+    &:focus {
+        outline: none;
         transform: translateY(-.1rem);
         box-shadow: 0 .5rem 1rem rgba($color-black,.1);
     
