--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -5,3 +5,34 @@
         clear:both;
     }
 }
+
+//Media query Manager
+/*
+0 - 600px: phone
+600 - 900px: Tablet Portrait
+900 - 1200: Tablet Landscape
+1200 - 1800: Desktop (Normal Styles applied)
+1800px + : Big Desktop
+
+$breakpoint arguemnt choices:
+-phone
+-tab-port
+-tab-land
+-big-desktop
+
+1em = 16px
+*/
+@mixin respond($breakpoint) {
+    @if $breakpoint == phone {
+        @media (max-width: 37.5em) { @content };
+    }
+    @if $breakpoint == tab-port {
+        @media (max-width: 56.25em) { @content };
+    }
+    @if $breakpoint == tab-land {
+        @media (max-width: 75em) { @content };
+    }
+    @if $breakpoint == big-desktop {
+        @media (min-width: 112.5em) { @content };
+    }
+}
