--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -14,6 +14,8 @@ body {
     backface-visibility: hidden;
     margin-bottom: 6rem; 
 
+
+
     &--main{
         display: block;
         font-size: 6rem;
@@ -23,9 +25,13 @@ body {
         /* most essentail animation */
         animation-name: moveInLeft;
         animation-duration: 1s;
-        animation-timing-function:ease-out; 
-        /* animation-iteration-count: 3; */
-        /* animation-delay: 3s; */
+        animation-timing-function:ease-out;
+        
+        @include respond(phone) {
+            letter-spacing: 1rem;
+            font-family: 5rem;
+        }
+
     }
     &--sub{
         display: block;
@@ -34,9 +40,11 @@ body {
         letter-spacing: 1.7rem;
     
         animation: moveInRight 1s ease-out;
-        /* animation-name: moveInRight;
-        animation-duration: 1s;
-        animation-timing-function:ease-out;  */
+
+        @include respond(phone) {
+            letter-spacing: .5rem;
+        }
+
     }
 }
 
@@ -51,6 +59,14 @@ body {
     color: transparent;
     letter-spacing: 2px;
     transition: all .2s;
+
+    @include respond(tab-port){
+        font-size: 3rem;
+    }
+
+    @include respond(phone){
+        font-size: 2.5rem;
+    }
 
     &:hover {
         transform: skewY(2deg) skewX(15deg) scale(1.1);
