--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -4,6 +4,10 @@
     font-size: 1.4rem;
     color: $color-grey-light-1;
 
+    @include respond(tab-port){
+        padding: 8rem 0;
+    }
+
 
     &__logo-box {
         text-align: center;
@@ -18,8 +22,12 @@
     &__navigation {
         border-top: 1px solid $color-grey-light-2;
         padding-top: 2rem;
-        transform: translateX(-15rem);
         
+        
+    @include respond(tab-port){
+        width:100%;
+        text-align: center;
+    }
     }
 
     &__list {
@@ -54,7 +62,11 @@
     &__copyright {
         border-top: 1px solid $color-grey-light-2;
         padding-top: 2rem;
-        transform: translateX(15rem);
+
+        @include respond(tab-port){
+            width:100%;
+            text-align: center;
+        }
     }
 
 
