--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -10,6 +10,11 @@
     position: relative;
     clip-path: polygon(0 0, 100% 0 ,100% 80%, 0 100%  );
 
+    @include respond(tab-port) {
+        clip-path: polygon(0 0, 100% 0 ,100% 85vh, 0 100%  );
+        -webkit-clip-path: polygon(0 0, 100% 0 ,100% 85vh, 0 100%  );
+    }
+
     &__text-box{
         position: absolute;
         top:40%;
