--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -32,6 +32,10 @@
     &__left {
         width: 33.3333333333333%;
         display: table-cell;
+
+        @include respond(tab-port){
+            display: none;
+        }
         
     }
 
@@ -45,6 +49,9 @@
     &__img {
         display: block;
         width: 100%;
+        @include respond(tab-port){
+            display: block;
+        }
     }
 
     &__text {
@@ -63,6 +70,21 @@
         -ms-hyphens: auto;
         -webkit-hyphens: auto;
         hyphens: auto;
+
+
+        @include respond(tab-port){
+            -moz-column-count: unset;
+            -moz-column-gap: 0;
+            -moz-column-rule:0;
+    
+            column-count: unset;
+            column-gap: 0;
+            column-rule: 0;
+    
+            -moz-hyphens: 0;
+            -ms-hyphens: 0;
+            -webkit-hyphens:none;
+        }
     }
 
     &:target {
