--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -78,6 +78,14 @@ body {
     font-size:  $default-font-size;
     font-weight: 700;
     text-transform: uppercase;
+
+    @include respond(tab-port){
+        font-size: 1.5rem;
+    }
+
+    @include respond(phone){
+        font-size: 1.4rem;
+    }
 }
 
 .paragraph {
