--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -195,6 +195,7 @@
             transform: translate(0);
             width: 100%;
             padding: 7rem 4rem 4rem 4rem;
+            text-align: center;
         }
         &__price-box {
 
