--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -11,7 +11,6 @@
     opacity: 0;
     visibility: hidden;
     transition: all .3s;
-
  
 
     &__content {
@@ -27,6 +26,11 @@
         opacity: 0;
         transform: translate(-50%, -50%) scale(.3);
         transition: all .4s .2s;
+
+        @include respond(tab-port){
+            display: table;
+            padding-bottom: 2rem;
+        }
     }
 
     &__left {
@@ -34,7 +38,9 @@
         display: table-cell;
 
         @include respond(tab-port){
-            display: none;
+            display: table-row;
+            overflow: visible;
+
         }
         
     }
@@ -44,13 +50,27 @@
         display: table-cell;
         vertical-align: middle;
         padding: 3rem 5rem;
+        @include respond(tab-port){
+            width: 100%;
+            display: table-row;
+            padding: 2rem 3rem;
+            text-align: center;
+            
+        }
+        
     }
 
     &__img {
         display: block;
         width: 100%;
         @include respond(tab-port){
-            display: block;
+            vertical-align: auto;
+            display: inline-block;
+            height: 10%;
+
+            &:last-child {
+                display: none; 
+            }
         }
     }
 
@@ -84,6 +104,8 @@
             -moz-hyphens: 0;
             -ms-hyphens: 0;
             -webkit-hyphens:none;
+            padding: 0 2rem;
+            margin-bottom: 2rem;
         }
     }
 
@@ -108,6 +130,11 @@
             display: inline-block;
             transition: all .3s;
             line-height: 1;
+
+            @include respond(tab-port){
+                top:1.5rem;
+            }
+
         }
 
         &:hover {
